# worldlines

./: Cargo.toml  LICENSE-MIT  README.md  after.json  after2.json  before.json  rustfmt.toml
benches/: bulk_insert.rs  bulk_remove.rs  query.rs  spawn.rs  spawn_iter.rs  spawn_many_in_for_loop.rs
examples/: hello_world.rs  stress_test.rs
macros/: Cargo.toml
macros/src/: bundle.rs  component.rs  lib.rs  resource.rs
src/: access.rs  bundle.rs  lib.rs  resource.rs
src/app/: mod.rs  plugin.rs  runner.rs
src/commands/: entity.rs  mod.rs  world.rs
src/component/: bundle.rs  column.rs  info.rs  mod.rs  set.rs  storage.rs  table.rs  tuple_impl.rs
src/entity/: allocator.rs  mod.rs  ptr.rs  reference.rs  tests.rs  world.rs
src/event/: mod.rs  storage.rs
src/query/: any_of.rs  contains.rs  mod.rs  not.rs  or.rs  tuple_impl.rs
src/queue/: entity.rs  mod.rs  world.rs
src/resource/: info.rs  mod.rs  storage.rs
src/schedule/: mod.rs  once.rs
src/storage/: column.rs  mod.rs  table.rs  type_id_hasher.rs  usize_hasher.rs
src/storage/sparse/: map.rs  mod.rs  set.rs
src/system/: any.rs  ext.rs  function.rs  input.rs  local.rs  map.rs  mod.rs  named.rs  node.rs  stateless.rs  tuple_impl.rs  var.rs
src/util/: array.rs  mod.rs  sparse.rs  type_data.rs  type_id_hasher.rs  type_set.rs
src/world/: mod.rs  ptr.rs  tests.rs
