[package]
name = "archetypal-ecs"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["derive"]
#! Enables derive macros for traits.
derive = ["dep:archetypal-ecs-macros"]

[dependencies]
archetypal-ecs-macros = { path = "./macros", optional = true }

atomic_refcell = "0.1.13"
dashmap = "6.0.1"
thiserror = "1.0.63"
indexmap = "2.4.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[workspace]
resolver = "2"
members = ["macros"]

[workspace.package]
authors = ["Alexandra Reaves <nyxalexandra@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

# `bulk_spawn`

[[bench]]
name = "spawn"
harness = false

[[bench]]
name = "spawn_iter"
harness = false

# ---

[[bench]]
name = "bulk_insert"
harness = false

[[bench]]
name = "bulk_remove"
harness = false
