[package]
name = "worldlines"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = false

[dependencies]
worldlines-macros.path = "./macros"

indexmap = "2.4.0"
thiserror = "1.0.63"
atomic_refcell = "0.1.13"

[dev-dependencies]
# for benchmarks
criterion = "0.5"

# workspace
# ---------

[workspace]
resolver = "2"
members = ["macros"]

[workspace.package]
authors = ["Alexandra Reaves <alexandra+git@reaves.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NyxAlexandra/worldlines"
version = "0.1.0"

# benchmarks
# ----------

# `bulk_spawn`

[[bench]]
name = "spawn"
harness = false

[[bench]]
name = "spawn_iter"
harness = false

# ---

[[bench]]
name = "bulk_insert"
harness = false

[[bench]]
name = "bulk_remove"
harness = false

# `query`

[[bench]]
name = "query"
harness = false
